Fix left margin of search input on small screen

--- a/src/stylesheets/components/_search.scss
+++ b/src/stylesheets/components/_search.scss
@@ -19,7 +19,9 @@
     }
 
     @media #{$small-down} {
-      width: 100%;
+      width: 96%;
+      right: 2%;
+      left: 2%;
     }
   }
 
